# emb-ntua-workshop

./: LICENSE  README.md  pyproject.toml
1_BrainRun/: code.py
1_BrainRun/data/: devices.csv  games.csv
1_BrainRun/utilities/: FeaturesExtractor.py  GesturesVisualizer.py
2_RiskFactors/: code.py
2_RiskFactors/data/: riskFactorData.csv
