[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Test Name <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
sklearn = "^0.0"
ipython = "^7.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
